--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ajv": "^6.12.2",
+    "axios": "^0.19.2",
     "fastclick": "^1.0.6",
     "swiper": "^5.4.5",
     "vue": "^2.5.2",
