--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "shelljs": "^0.7.6",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "typescript": "^3.9.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
