--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "swiper": "^5.4.5",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^2.6.7",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
